// SonarLint, open source software quality management tool.
// Copyright (C) 2015-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarLint is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarLint is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.


syntax = "proto3";

package sonarlint;

// The java package can be changed without breaking compatibility.
// it impacts only the generated Java code.
option java_package = "org.sonarsource.sonarlint.core.proto";
option optimize_for = SPEED;

message SyncStatus {
  string sonarlint_core_version = 1;
  string client_user_agent = 2;
  int64 sync_timestamp = 3;
}

message ServerStatus {
  string id = 1;
  string version = 2;
  string status = 3;
}

message PluginReferences {
  repeated PluginReference reference = 1;
  
  message PluginReference {
    string key = 1;
    string hash = 2;
    string filename = 3;
  }
}
